[package]
name = "fios-stats"
description = "Fetches network stats from the Fios Quantum Gateway router"
version = "0.1.0"
authors = ["Allan Beaufour <allan@beaufour.dk>"]
repository = "https://github.com/beaufour/fios-stats"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
reqwest = "0.9.20"
tokio = "1.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"
clap = "2.31.2"
log = "0.4.8"
env_logger = "0.6.2"
simple-error = "0.2"
